fortran/thermophysical_propertiesInterface.h

/*!
* This file has been dynamically generated by Class Interface Xml (CIX) 
* DO NOT MODIFY THIS FILE -- CHANGES WILL BE OVERWRITTEN UPON REGENERATION
* If changes need to occur, modify the appropriate CIX xml file
* Date Generated: Mon Dec 13 15:31:48 EST 2021
* If any issues are experiences with this generated file that cannot be fixed
* with adjustment of the CIX xml file, please contact Robert A. Lefebvre, raq@ornl.gov
*/
#ifndef THERMOPHYSICAL_PROPERTIESINTERFACE_H
#define THERMOPHYSICAL_PROPERTIESINTERFACE_H
#include "data_store.hh"
#include "thermophysical_properties.hh"
using namespace saline;
#ifdef __cplusplus
extern "C" {
#endif
double Thermophysical_Properties_cp(void * Thermophysical_Properties_ptr,double * t,double * p);
double Thermophysical_Properties_cp_h(void * Thermophysical_Properties_ptr,double * h,double * p);
double Thermophysical_Properties_cp_kg(void * Thermophysical_Properties_ptr,double * t,double * p);
double Thermophysical_Properties_cp_h_kg(void * Thermophysical_Properties_ptr,double * h,double * p);
double Thermophysical_Properties_mu(void * Thermophysical_Properties_ptr,double * t,double * p);
double Thermophysical_Properties_mu_h(void * Thermophysical_Properties_ptr,double * h,double * p);
double Thermophysical_Properties_k(void * Thermophysical_Properties_ptr,double * t,double * p);
double Thermophysical_Properties_k_h(void * Thermophysical_Properties_ptr,double * h,double * p);
double Thermophysical_Properties_rho(void * Thermophysical_Properties_ptr,double * t,double * p);
double Thermophysical_Properties_rho_h(void * Thermophysical_Properties_ptr,double * h,double * p);
double Thermophysical_Properties_rho_kgm3(void * Thermophysical_Properties_ptr,double * t,double * p);
double Thermophysical_Properties_rho_h_kgm3(void * Thermophysical_Properties_ptr,double * h,double * p);
double Thermophysical_Properties_h_t(void * Thermophysical_Properties_ptr,double * t);
double Thermophysical_Properties_h_t_kg(void * Thermophysical_Properties_ptr,double * t);
double Thermophysical_Properties_t_h(void * Thermophysical_Properties_ptr,double * h);
double Thermophysical_Properties_t_h_kg(void * Thermophysical_Properties_ptr,double * h);
void Thermophysical_Properties_init_data_store(void * Thermophysical_Properties_ptr,Data_Store* data);
bool Thermophysical_Properties_set_composition(void * Thermophysical_Properties_ptr,char* name,double* mole_perecents,int * count);
bool Thermophysical_Properties_is_SaltValid(void * Thermophysical_Properties_ptr,char* name,int * count);
void* Thermophysical_Properties_initialize();
void Thermophysical_Properties_destroy(void * Thermophysical_Properties_ptr);
#ifdef __cplusplus
}
#endif
#endif /* THERMOPHYSICAL_PROPERTIESINTERFACE_H */