fortran/thermophysical_properties_I.f90

!>
!! This file has been dynamically generated by Class Interface Xml (CIX) 
!! DO NOT MODIFY THIS FILE -- CHANGES WILL BE OVERWRITTEN UPON REGENERATION
!! If changes need to occur, modify the appropriate CIX xml file
!! Date Generated: Mon Dec 13 15:31:48 EST 2021
!! If any issues are experiences with this generated file that cannot be fixed
!! with adjustment of the CIX xml file, please contact Robert A. Lefebvre, raq@ornl.gov
!!/
module thermophysical_properties_I
use, intrinsic :: ISO_C_BINDING
interface
real(C_DOUBLE) function f_Thermophysical_Properties_cp(Thermophysical_Properties_ptr, t,p ) BIND(C,name="Thermophysical_Properties_cp")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: t;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_cp_h(Thermophysical_Properties_ptr, h,p ) BIND(C,name="Thermophysical_Properties_cp_h")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: h;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_cp_kg(Thermophysical_Properties_ptr, t,p ) BIND(C,name="Thermophysical_Properties_cp_kg")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: t;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_cp_h_kg(Thermophysical_Properties_ptr, h,p ) BIND(C,name="Thermophysical_Properties_cp_h_kg")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: h;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_mu(Thermophysical_Properties_ptr, t,p ) BIND(C,name="Thermophysical_Properties_mu")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: t;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_mu_h(Thermophysical_Properties_ptr, h,p ) BIND(C,name="Thermophysical_Properties_mu_h")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: h;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_k(Thermophysical_Properties_ptr, t,p ) BIND(C,name="Thermophysical_Properties_k")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: t;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_k_h(Thermophysical_Properties_ptr, h,p ) BIND(C,name="Thermophysical_Properties_k_h")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: h;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_rho(Thermophysical_Properties_ptr, t,p ) BIND(C,name="Thermophysical_Properties_rho")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: t;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_rho_h(Thermophysical_Properties_ptr, h,p ) BIND(C,name="Thermophysical_Properties_rho_h")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: h;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_rho_kgm3(Thermophysical_Properties_ptr, t,p ) BIND(C,name="Thermophysical_Properties_rho_kgm3")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: t;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_rho_h_kgm3(Thermophysical_Properties_ptr, h,p ) BIND(C,name="Thermophysical_Properties_rho_h_kgm3")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: h;
    real(C_DOUBLE) :: p;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_h_t(Thermophysical_Properties_ptr, t ) BIND(C,name="Thermophysical_Properties_h_t")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: t;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_h_t_kg(Thermophysical_Properties_ptr, t ) BIND(C,name="Thermophysical_Properties_h_t_kg")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: t;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_t_h(Thermophysical_Properties_ptr, h ) BIND(C,name="Thermophysical_Properties_t_h")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: h;
end function
real(C_DOUBLE) function f_Thermophysical_Properties_t_h_kg(Thermophysical_Properties_ptr, h ) BIND(C,name="Thermophysical_Properties_t_h_kg")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    real(C_DOUBLE) :: h;
end function
subroutine f_Thermophysical_Properties_init_data_store(Thermophysical_Properties_ptr, data ) BIND(C,name="Thermophysical_Properties_init_data_store")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    type(C_PTR), value :: data;
end subroutine
logical(C_BOOL) function f_Thermophysical_Properties_set_composition(Thermophysical_Properties_ptr, name,mole_perecents,count ) BIND(C,name="Thermophysical_Properties_set_composition")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    character(C_CHAR) :: name;
    real(C_DOUBLE) :: mole_perecents;
    integer(C_INT) :: count;
end function
logical(C_BOOL) function f_Thermophysical_Properties_is_SaltValid(Thermophysical_Properties_ptr, name,count ) BIND(C,name="Thermophysical_Properties_is_SaltValid")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: Thermophysical_Properties_ptr;
    character(C_CHAR) :: name;
    integer(C_INT) :: count;
end function
type(C_PTR) function f_Thermophysical_Properties_initialize( )BIND(C,name="Thermophysical_Properties_initialize")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR) :: Thermophysical_Properties_ptr;
end function
subroutine f_Thermophysical_Properties_destroy(this) BIND(C,name="Thermophysical_Properties_destroy")
    use,intrinsic :: ISO_C_BINDING
    implicit none
    type(C_PTR), value :: this;
end subroutine
end interface
end module thermophysical_properties_I
